[package]
description = "Stateful load balancer custom-tailored for llama.cpp"
license = "MIT"
name = "paddler"
repository = "https://github.com/distantmagic/paddler"
version = "1.2.1"
edition = "2021"

[workspace]
members = ["integration_tests"]

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-rt = "2.10.0"
actix-web = "4.11.0"
actix-web-lab = "0.24.1"
actix-ws = "0.3.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-stream = "0.3.6"
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "4.5.39", features = ["derive"] }
dashmap = "6.1.0"
encoding_rs = { version = "0.8.35", features = ["serde"] }
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["tokio-io"] }
hf-hub = { version = "0.4.3", features = ["tokio"] }
indoc = "2.0.6"
llama-cpp-2 = { version = "0.1.108" }
log = "0.4.27"
nix = { version = "0.30.1", features = ["signal"] }
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = "0.27.0"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

# ratatui dashboard deps
chrono = { version = "0.4.41", optional = true }
crossterm = { version = "0.28.1", features = ["event-stream"], optional = true }
ratatui = { version = "0.29.0", optional = true }
reqwest-eventsource = { version = "0.6.0", optional = true }

# statsd reporter deps
cadence = { version = "1.5.0", optional = true }

# web dashboard deps
askama = { version = "0.14.0", optional = true }
esbuild-metafile = { version = "0.2.0", optional = true }
mime_guess = { version = "2.0.5", optional = true }
rust-embed = { version = "8.7.2", optional = true, features = ["interpolate-folder-path"] }

[features]
default = ["ratatui_dashboard", "statsd_reporter", "web_dashboard"]
ratatui_dashboard = ["dep:chrono", "dep:crossterm", "dep:ratatui", "dep:reqwest-eventsource"]
statsd_reporter = ["dep:cadence"]
tests_that_use_llms = []
web_dashboard = ["dep:askama", "dep:esbuild-metafile", "dep:mime_guess", "dep:rust-embed"]

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.20.0"
