[package]
name = "paddler"
edition = "2021"
description = "Stateful load balancer custom-tailored for llama.cpp"
license = "MIT"
authors = ["Intentee"]
repository = "https://github.com/distantmagic/paddler"
documentation = "https://github.com/distantmagic/paddler/blob/main/README.md"
version = "1.2.1"

[workspace]
members = ["integration_tests"]

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-web-lab = "0.24.1"
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-stream = "0.3.6"
async-trait = "0.1.88"
bytes = "1.10.1"
clap = { version = "4.5.39", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["tokio-io"] }
log = "0.4.27"
pingora = { version = "0.5.0", features = ["proxy"] }
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
url = { version = "2.5.4", features = ["serde"] }
regex = "1.11.1"

chrono = { version = "0.4.41", optional = true }
crossterm = { version = "0.28.1", features = ["event-stream"], optional = true }
ratatui = { version = "0.29.0", optional = true }

# statsd reporter deps
cadence = { version = "1.5.0", optional = true }

# web dashboard deps
askama = { version = "0.14.0", optional = true }
esbuild-metafile = { version = "0.2.0", optional = true }
mime_guess = { version = "2.0.5", optional = true }
rust-embed = { version = "8.7.2", optional = true, features = ["interpolate-folder-path"] }
uuid = { version = "1.17.0", features = ["v4", "serde", "zerocopy"] }
reqwest-eventsource = "0.6.0"
indoc = "2.0.6"

[features]
default = ["statsd_reporter", "ratatui_dashboard"]
ratatui_dashboard = ["dep:chrono", "dep:crossterm", "dep:ratatui"]
statsd_reporter = ["dep:cadence"]
web_dashboard = ["dep:askama", "dep:esbuild-metafile", "dep:mime_guess", "dep:rust-embed"]

[profile.release]
lto = true
codegen-units = 1
