[package]
name = "paddler"
edition = "2021"
description = "Stateful load balancer custom-tailored for llama.cpp"
license = "MIT"
authors = ["Intentee"]
repository = "https://github.com/distantmagic/paddler"
documentation = "https://github.com/distantmagic/paddler/blob/main/README.md"
version = "2.0.0"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-rt = "2.10.0"
actix-web = "4.11.0"
actix-web-lab = "0.24.1"
actix-ws = "0.3.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-stream = "0.3.6"
async-trait = "0.1.88"
bytes = "1.10.1"
cadence = "1.5.0"
clap = { version = "4.5.39", features = ["derive"] }
dashmap = "6.1.0"
encoding_rs = { version = "0.8.35", features = ["serde"] }
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["tokio-io"] }
hf-hub = { version = "0.4.3", features = ["tokio"] }
indoc = "2.0.6"
llama-cpp-2 = { version = "0.1.108" }
log = "0.4.27"
nix = { version = "0.30.1", features = ["signal"] }
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = "0.27.0"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

# web dashboard deps
askama = { version = "0.14.0", optional = true }
esbuild-metafile = { version = "0.2.1", optional = true }
mime_guess = { version = "2.0.5", optional = true }
rust-embed = { version = "8.7.2", optional = true, features = ["interpolate-folder-path"] }
minijinja = { version = "2.11.0", features = ["builtins", "json", "loader"] }
thiserror = "2.0.12"
rand = "0.9.2"

[features]
web_admin_panel = ["dep:askama", "dep:esbuild-metafile", "dep:mime_guess", "dep:rust-embed"]
default = ["web_admin_panel"]
tests_that_use_llms = []

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.20.0"
