[package]
name = "integration"
version = "0.1.0"
edition = "2021"

[dependencies]
cucumber = "0.21.1"
nix = { version = "0.30.1", features = ["process"] }
reqwest = "0.12.15"
serde_json = "1.0.140"
sysinfo = "0.35.0"
tokio = "1.45.0"
log = "0.4.27"
paddler = { path = "../paddler" }
lazy_static = "1.5.0"

[[test]]
name = "paddler"
harness = false
