[package]
name = "integration_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
cucumber = "0.21.1"
dashmap = "6.1.0"
futures = "0.3.31"
openmetrics-parser = "0.3"
reqwest = { version = "0.12.20", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }

[[test]]
name = "paddler"
harness = false
